src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>TFM_Correlation_ID__c</fullName>
        <description>TMFORUM: Additional identifier coming from an external system</description>
        <externalId>true</externalId>
        <label>Correlation ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMF_Status_Change_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>TMFORUM: The date of state change</description>
        <inlineHelpText>The date of state change</inlineHelpText>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TMF_Status_Reason_Change__c</fullName>
        <description>TMFORUM: The reason of state change</description>
        <inlineHelpText>The reason of state change</inlineHelpText>
        <label>Status Reason Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TMF_Sub_Status__c</fullName>
        <description>TMFORUM: The current sub status of the Trouble Ticket</description>
        <inlineHelpText>The current sub status of the Trouble Ticket</inlineHelpText>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMF_Target_Resolution_Date__c</fullName>
        <description>TMFORUM: Foreseen trouble resolution date</description>
        <inlineHelpText>Foreseen trouble resolution date</inlineHelpText>
        <label>Target Resolution Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>